k8s/prod/PolybotService/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: polybot-prod
  name: polybot-prod
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polybot-prod
  template:
    metadata:
      labels:
        app: polybot-prod
    spec:
      containers:
        - image: deemaa/polybot-prod:53
          name: polybot-container
---
apiVersion: v1
kind: Service
metadata:
  name: polybot-prod-service
  namespace: prod
spec:
  selector:
    app: polybot-prod
  ports:
    - port: 8443         # Internal port (what Ingress sees)
      targetPort: 8443   # Your app's container port
